<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/ImageViewWardenMenu" android:padding="8.0sp" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="0.0dip" android:contentDescription="@string/Logo" app:layout_constraintBottom_toTopOf="@id/CardView1wardenMenu" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/logo2" />
    <android.support.v7.widget.CardView android:id="@id/CardView1wardenMenu" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="8.0dip" app:cardBackgroundColor="@color/LightGreen" app:layout_constraintBottom_toTopOf="@id/CardView2WardenMenu" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ImageViewWardenMenu">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="left" android:layout_gravity="center" android:id="@id/textView1CardView1WM" android:padding="16.0sp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0sp" android:text="@string/totalcomplaints" android:layout_weight="3.0" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="right" android:layout_gravity="center" android:id="@id/total" android:padding="16.0sp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0sp" android:text="@string/cardview1textview2" android:layout_weight="1.0" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView android:id="@id/CardView2WardenMenu" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginBottom="8.0dip" app:cardBackgroundColor="@color/LightPink" app:layout_constraintBottom_toTopOf="@id/CardView3wardenMenu" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/CardView1wardenMenu">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="left" android:layout_gravity="center" android:id="@id/textView1CardView2WM" android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0sp" android:text="@string/pending" android:layout_weight="3.0" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="right" android:layout_gravity="center" android:id="@id/pending" android:padding="16.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/cardview2textview2" android:layout_weight="1.0" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView android:id="@id/CardView3wardenMenu" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginBottom="8.0dip" app:cardBackgroundColor="@color/Lightyellow" app:layout_constraintBottom_toTopOf="@id/CardView4wardenMenu" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/CardView2WardenMenu">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="left" android:layout_gravity="center" android:id="@id/textView1CardView3WM" android:padding="16.0sp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0sp" android:text="@string/resolved" android:layout_weight="3.0" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="right" android:layout_gravity="center" android:id="@id/resolved" android:padding="16.0sp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0sp" android:text="@string/cardview3textview2" android:layout_weight="1.0" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView android:id="@id/CardView4wardenMenu" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginBottom="8.0dip" app:cardBackgroundColor="@color/LightGreen2" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/CardView3wardenMenu">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="left" android:layout_gravity="center" android:id="@id/textView1CardView4WM" android:padding="16.0sp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0sp" android:text="@string/processing" android:layout_weight="3.0" />
            <TextView android:textSize="20.0sp" android:textStyle="bold" android:gravity="right" android:layout_gravity="center" android:id="@id/processing" android:padding="16.0sp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0sp" android:text="@string/cardview4textview2" android:layout_weight="1.0" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>